[project]
name = "StarlightProto"
version = "0.5.2"
description = "Default template for PDM package"
authors = [
    {name = "cho6019", email = "j01040864205@gmail.com"},
]
dependencies = ["astropy>=6.1.7", "typer>=0.15.1", "pytest>=8.3.4", "pandas>=2.2.3", "opencage>=3.0.4", "pytz>=2024.2", "streamlit>=1.42.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
cho-test = "starlightproto.stella:entry_point"

[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
